# gtest_script

./: NewCClass  NewClass  NewPackage  NewProject  README.md
components/: GenerateSources.sh  vars.sh
template/CClass/: CClass.c  CClass.h  CClass.protected.h  CClassTest.cpp
template/Class/: Class.cpp  Class.h  ClassTest.cpp
template/project/: .vimrc_local  CMakeLists.txt  README.md
template/project/ext/: CMakeLists.txt
template/project/src/: CMakeLists.txt  ProjectName.c  main.c
template/project/test/: CMakeLists.txt  ProjectNameTest.cpp
